overflow fix

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
   );
   background-size: 400% 400%;
   animation: gradient 10s ease infinite;
+  overflow: hidden;
 }
 
 /* for background color */
